@@ -5,6 +5,7 @@ version 0.9:
 
 - Indeo 4 decoder
 - SMJPEG demuxer
+- y41p Brooktree Uncompressed 4:1:1 12-bit encoder and decoder
 - openal input device added
 - boxblur filter added
 - BWF muxer
